Estilo y vista HomeAdmin

--- a/Empresa/proyecto2empresafront/src/App.css
+++ b/Empresa/proyecto2empresafront/src/App.css
@@ -1,3 +1,18 @@
+body{
+  /* Agregar un fondo */
+  background-color: #001940;
+  
+}
+
+.main {
+  background-color: #FFF;
+}
+
+.formularioInicioSesion {
+  background-color: #cfcfcf;
+  color: #547ab7;
+}
+
 .App {
   text-align: center;
 }
