--- a/Empresa/proyecto2empresafront/src/App.css
+++ b/Empresa/proyecto2empresafront/src/App.css
@@ -13,6 +13,23 @@ body{
   color: #547ab7;
 }
 
+.navbar {
+  background-color: #2668d3;
+}
+
+.nav-item {
+  font-weight: bold;
+  padding: 0.3em;
+  margin-right: 0.5em;
+}
+
+.nav-item:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.navButton {
+  font-weight: bold;
+}
+
 .App {
   text-align: center;
 }
