Correcciones generales, vista crear Cupon y Ver Promociones

--- a/Empresa/proyecto2empresafront/src/App.css
+++ b/Empresa/proyecto2empresafront/src/App.css
@@ -65,6 +65,37 @@ footer a:hover {
   min-width: 20em; 
 }
 
+.formCreateCupon h3 {
+  color: #547ab7;
+}
+
+.formCreateCupon {
+  display: flex;
+  justify-content: center;
+}
+
+.formCreateCupon .formContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #cfcfcf;
+  width: 75%;
+  padding: 2em;
+  border-radius: 10px;
+  margin-bottom: 1em;
+}
+
+.formCreateCupon .formContainer .form-group {
+  margin-bottom: 1em;
+  width: 100%;
+}
+
+.formCreateCupon .formContainer .form-control {
+  width: 100%;
+  min-width: 20em;
+}
+
 
 
 .formularioInicioSesion {
