--- a/Empresa/proyecto2empresafront/src/App.css
+++ b/Empresa/proyecto2empresafront/src/App.css
@@ -96,6 +96,36 @@ footer a:hover {
   min-width: 20em;
 }
 
+.formCreatePromocion h3 {
+  color: #547ab7;
+}
+
+.formCreatePromocion {
+  display: flex;
+  justify-content: center;
+}
+
+.formCreatePromocion .formContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #cfcfcf;
+  width: 75%;
+  padding: 2em;
+  border-radius: 10px;
+  margin-bottom: 1em;
+}
+
+.formCreatePromocion .formContainer .form-group {
+  margin-bottom: 1em;
+  width: 100%;
+}
+
+.formCreatePromocion .formContainer .form-control {
+  width: 100%;
+  min-width: 20em;
+}
 
 
 .formularioInicioSesion {
