--- a/Cliente/Proyecto2ClienteFront/src/app/pages/carrito/carrito.page.html
+++ b/Cliente/Proyecto2ClienteFront/src/app/pages/carrito/carrito.page.html
@@ -1,13 +1,35 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>carrito</ion-title>
+    <ion-title>Carrito</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">carrito</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <div class="main-container">
+    <ion-grid *ngIf="carrito.length > 0">
+      <ion-row>
+        <ion-col size-lg="6" size-md="6" size-sm="12" size="12" *ngFor="let cupon of carrito">
+          <ion-card>
+            <ion-img [src]="cupon.imagenRepresentativa" class="full-img"></ion-img>
+            <ion-card-content>
+              <p class="ion-text-center">{{cupon.ubicacion}}</p>
+              <p class="ion-text-center">{{cupon.nombreUsuario}}</p>
+              <p class="ion-text-center">{{cupon.idCategoria}}</p>
+              <p class="ion-text-center">{{cupon.precio}}</p>
+              <p class="ion-text-center">Cantidad: {{cupon.cantidad}}</p>
+              <div class="quantity-buttons">
+                <ion-button (click)="disminuirCantidad(cupon)">-</ion-button>
+                <ion-button (click)="aumentarCantidad(cupon)">+</ion-button>
+              </div>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-button ion-text="Comprar" (click)="pasarACompra()">Comprar</ion-button>
+    <!-- Mensaje si no hay cupones en el carrito -->
+    <div *ngIf="carrito.length === 0">
+      <p>No hay cupones en el carrito.</p>
+    </div>
+  </div>
 </ion-content>
