--- a/Cliente/Proyecto2ClienteFront/src/app/pages/compra/compra.page.html
+++ b/Cliente/Proyecto2ClienteFront/src/app/pages/compra/compra.page.html
@@ -1,13 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>compra</ion-title>
+    <ion-title>Compra</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">compra</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <div class="main-container">
+    <form (ngSubmit)="comprar()">
+      <ion-item>
+        <ion-label position="floating">Nombre del Tarjetahabiente</ion-label>
+        <ion-input [(ngModel)]="tarjetaHabiente" name="tarjetaHabiente" type="text" required></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Número de Tarjeta (PAN)</ion-label>
+        <ion-input [(ngModel)]="numeroTarjeta" name="numeroTarjeta" type="text" required></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Fecha de Vencimiento</ion-label>
+        <ion-input [(ngModel)]="fechaVencimiento" name="fechaVencimiento" type="month" required></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Código de Seguridad (CVV)</ion-label>
+        <ion-input [(ngModel)]="cvv" name="cvv" type="password" maxlength="3" required></ion-input>
+      </ion-item>
+      <ion-button expand="block" type="submit">Comprar</ion-button>
+    </form>
+  </div>
 </ion-content>
