--- a/Empresa/proyecto2empresafront/src/App.css
+++ b/Empresa/proyecto2empresafront/src/App.css
@@ -167,13 +167,20 @@ footer a:hover {
 }
 
 .navbar {
-  background-color: #2668d3;
+  /*background-color: #2668d3;*/
+  background-color: #0950a8;
+  color: #FFF;
 }
 
 .nav-item {
   font-weight: bold;
   padding: 0.3em;
   margin-right: 0.5em;
+  color: #FFF;
+}
+
+.nav-link {
+  color: #FFF;
 }
 
 .nav-item:hover {
