--- a/Cliente/Proyecto2ClienteFront/src/app/pages/home/home.page.html
+++ b/Cliente/Proyecto2ClienteFront/src/app/pages/home/home.page.html
@@ -35,7 +35,7 @@
             <ion-card-content>
               <p class="ion-text-center">{{cupon.ubicacion}}</p>
               <p class="ion-text-center">{{cupon.nombreUsuario}}</p>
-              <p class="ion-text-center">{{cupon.idCategoria}}</p>
+              <!-- <p class="ion-text-center">{{cupon.idCategoria}}</p> -->
               <p class="ion-text-center">{{cupon.precio}}</p>
               <ion-button expand="block" class="add-to-cart-button" fill="outline" shape="round" (click)="agregarAlCarrito(cupon)">
                 Agregar al carrito
