--- a/Cliente/Proyecto2ClienteFront/src/app/pages/home/home.page.html
+++ b/Cliente/Proyecto2ClienteFront/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
 
 <ion-content [fullscreen]="true" class="ion-padding" id="main-content">
   <div class="main-container">
-    <!-- Input para filtrar -->
+    <!-- Input para el filtro -->
     <ion-item>
       <ion-label>Buscar:</ion-label>
       <ion-input [(ngModel)]="searchText" placeholder="Escribe para filtrar..."></ion-input>
