--- a/Cliente/Proyecto2ClienteFront/src/app/pages/carrito/carrito.page.html
+++ b/Cliente/Proyecto2ClienteFront/src/app/pages/carrito/carrito.page.html
@@ -9,7 +9,6 @@
     <ion-grid *ngIf="carrito.length > 0">
       <ion-row>
         <ion-col size="12">
-          <ion-card>
             <ion-grid>
               <ion-row>
                 <ion-col size="4"><strong>Imagen</strong></ion-col>
@@ -22,7 +21,7 @@
                 </ion-col>
                 <ion-col size="4">
                   <p class="ion-text-center">{{cupon.ubicacion}}</p>
-                  <p class="ion-text-center">{{cupon.nombreUsuario}}</p>
+                  <p class="ion-text-center">{{cupon.nombreEmpresa}}</p>
                   <p class="ion-text-center">{{cupon.precio}}</p>
                   <p class="ion-text-center">Cantidad: {{cupon.cantidad}}</p>
                 </ion-col>
@@ -32,7 +31,6 @@
                 </ion-col>
               </ion-row>
             </ion-grid>
-          </ion-card>
         </ion-col>
       </ion-row>
     </ion-grid>
