--- a/Cliente/Proyecto2ClienteFront/src/app/pages/reserva/reserva.page.html
+++ b/Cliente/Proyecto2ClienteFront/src/app/pages/reserva/reserva.page.html
@@ -17,7 +17,8 @@
             <h3>Información de Compra</h3>
             <p><strong>Cédula:</strong> {{ compra.cedula }}</p>
             <p><strong>Precio Total:</strong> ₡{{ compra.precioTotal }}</p>
-            <p><strong>Descuento Final:</strong> ₡{{ compra.descuentoFinal }}</p>
+            <p><strong>Precio Con Descuento:</strong> ₡{{ (compra.precioTotal-(compra.precioTotal*(compra.descuentoFinal/100))).toFixed(2) }}</p>
+            <p><strong>Descuento Final:</strong> {{ compra.descuentoFinal }}%</p>
             
             <div *ngFor="let cupon of compra.cupones" class="cupon-section">
               <hr> <!-- Separador -->
@@ -26,6 +27,8 @@
               <p><strong>Ubicación:</strong> {{ cupon.ubicacion }}</p>
               <p><strong>Empresa:</strong> {{ cupon.empresa }}</p>
               <p><strong>Cantidad:</strong> {{ cupon.cantidad }}</p>
+              <!-- <p><strong>Precio:</strong> {{ cupon.precio }}</p>
+              <p><strong>Descuento:</strong> {{ cupon.descuento }}</p> -->
             </div>
           </ion-col>
         </ion-row>
