--- a/Cliente/Proyecto2ClienteFront/src/app/pages/usuario/usuario.page.html
+++ b/Cliente/Proyecto2ClienteFront/src/app/pages/usuario/usuario.page.html
@@ -3,6 +3,7 @@
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <div class="login-container">
+    <ion-img src="https://res.cloudinary.com/dqpootcvr/image/upload/v1718083665/mg9ywwrik93uz5pqnmwj.webp" class="login-icon"></ion-img>
     <div class="app-title">
       <h1>Facil Cupones</h1>
     </div>
